k8s/web-app/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3002
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 3003
